--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <spring.version>4.1.1.RELEASE</spring.version>
         <org.springframework.security.version>4.1.0.RELEASE</org.springframework.security.version>
         <org.slf4j-version>1.6.6</org.slf4j-version>
+        <log4j.version>1.2.17</log4j.version>
+        <hibernate.version>4.3.6.Final</hibernate.version>
     </properties>
 
     <dependencies>
@@ -77,6 +79,12 @@
             <artifactId>spring-tx</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <!-- http://mvnrepository.com/artifact/org.springframework/spring-orm -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
         <!--spring security-->
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -139,7 +147,23 @@
             <version>${org.slf4j-version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <!-- Hibernate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
         <!--jstl-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.1</version>
+        </dependency>
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
