--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,12 @@
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
+        <!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.3.2.Final</version>
+        </dependency>
         <!--jstl-->
         <dependency>
             <groupId>org.apache.commons</groupId>
