--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,19 @@
             <artifactId>itextpdf</artifactId>
             <version>5.0.6</version>
         </dependency>
+
+        <!-- Jackson JSON Mapper -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.4.1.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
