--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.4.1.1</version>
         </dependency>
-
+        <!--twilio account-->
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio-java-sdk</artifactId>
+            <version>3.4.5</version>
+        </dependency>
     </dependencies>
 
     <build>
